Created the output print function.

--- a/Project_1/Makefile
+++ b/Project_1/Makefile
@@ -1,17 +1,5 @@
-# This target will compile all the file.
-all: pdeSolver
-
-pdeSolver.o: main.o partialDifferential.o utils.o
-	gcc -c main.o partialDifferential.o utils.o -lm -o pdeSolver
-
-main.o: ./src/main.c
-	gcc -c ./src/main.c
-
-partialDifferential.o: ./src/partialDifferential.c
-	gcc -c ./src/partialDifferential.c
-
-utils.o: ./src/utils.c
-	gcc -c ./src/utils.c
+all:
+	gcc ./src/partialDifferential.c ./src/pdeSolver.c ./src/utils.c -lm -o pdeSolver
 
 clean:
-	rm -rf *o pdeSolver
+	rm -rf *.o pdeSolver
