Doxygen configuration created.

--- a/Project_1/Makefile
+++ b/Project_1/Makefile
@@ -1,35 +1,55 @@
-#!/usr/bin/make
+# Folders
+_DOC = doc
+_SRC = src
+_LIB = lib
+_OBJ = obj
 
-# folders
-_SRC = ./src
-_LIB = ./lib
-_OBJ = ./obj
-
+# Programs
+DOXYGEN = doxygen
 CC = gcc
+LINK = ln -rsf
 RM = rm
-CFLAGS = -lm -Wall -Werror -Wextra -I $(_LIB)
+FILE_RM = ${RM} -f
+FOLDER_RM = ${RM} -rf
 
-FILES =
-FILES += partialDifferential
-FILES += utils
-FILES += pdeSolver
+# Configuration variables
+DOXYGEN_CONFIG = config
+DOXYGEN_HTML = ${_DOC}/html
+COMPILE_OBJ = -c
+CFLAGS = -Wall -Ilib -std=gnu99 -lm
+SRC_FILES = partialDifferential utils pdeSolver
+OBJECTS = $(foreach src, $(SRC_FILES), ${_OBJ}/$(src).o)
+EXEC = pdeSolver
+DOXYGEN_COMPILED_FILES = ${DOXYGEN_HTML} ${_DOC}/latex
 
-OBJECTS = $(addprefix $(_OBJ)/, $(addsuffix .o, $(FILES)))
 
-$(_OBJ)/%.o: $(_SRC)/%.c
-	$(CC) -c $< -o $@ $(CFLAGS)
+# Default rule
+all: ${EXEC}
 
-EXECUTABLE = pdeSolver
+# Debug rule
+debug: CFLAGS += -g -pg
+debug: clean_files all
 
-.PHONY: all clean
+# Compilation of executable
+${EXEC}: ${OBJECTS}
+	${CC} ${OBJECTS} -o ${EXEC} ${CFLAGS}
 
-all: $(EXECUTABLE)
+# Doxygen documentation generation rule
+doc: FORCE
+	${DOXYGEN} ${_DOC}/${DOXYGEN_CONFIG}
+	${LINK} ${DOXYGEN_HTML}/index.html Documentation.html
 
-$(EXECUTABLE): $(OBJECTS)
-	$(CC) $(OBJECTS) $(CFLAGS) -o $(EXECUTABLE)
+FORCE:
 
-%(_OBJ)/%.o: $(_SRC)/%.c
-	$(CC) -c $< -o $@ $(CFLAGS)
+# Object compilation rule
+${_OBJ}/%.o: ${_SRC}/%.c
+	${CC} ${COMPILE_OBJ} $< -o $@ ${CFLAGS} ${DEBUG}
 
-clean:
-	$(RM) -f $(OBJECTS) $(EXECUTABLE)
+# Clean everything
+clean: clean_files clean_doxygen
+
+clean_files:
+	${FILE_RM} ${OBJECTS} ${EXEC} gmon.out
+
+clean_doxygen:
+	${FOLDER_RM} ${DOXYGEN_COMPILED_FILES} Documentation.html
